Add http handler and update README

--- a/serverless.yml
+++ b/serverless.yml
@@ -13,3 +13,9 @@ package:
 functions:
   ipsupm:
     handler: bin/ipsum
+    events:
+       - http:
+          url: ipsum
+          method: GET
+
+
