--- a/serverless.yml
+++ b/serverless.yml
@@ -11,11 +11,11 @@ package:
    - ./bin/**
 
 functions:
-  ipsupm:
+  ipsum:
     handler: bin/ipsum
     events:
        - http:
-          url: ipsum
+          path: ipsum
           method: GET
 
 
